Updated/added Ansible roles to latest versions.
Signed-off-by: Larry Smith Jr <mrlesmithjr@gmail.com>